--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "^3.0.2",
     "bootstrap": "3",
     "coffeescript": "1.12.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "sweetalert": "^2.0.8"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.4"
