--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "3",
     "coffeescript": "1.12.7",
     "jquery": "^3.2.1",
+    "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8"
   },
   "devDependencies": {
